package TestGameObjectDDF;

message InputTarget
{
    required float Value = 1;
}
